add_executable(expr expression.cpp)
add_executable(if triangle.cpp)
add_executable(switch grade.cpp)
add_executable(while sum.cpp)
add_executable(for calendar.cpp)
add_executable(range_for textRetrieval.cpp)
add_executable(exception devidezero.cpp)
add_executable(implicit implicit.cpp)
add_executable(explicit explicit.cpp)
add_executable(operator operator.cpp)
add_executable(overflow overflow.cpp)